==> cristianku/winder_cnc/3.5inch_16BIT_Module_ILI9486_MRB3503_V1.0/1-Demo/Demo_STM32/Demo_Apollo_STM32F767IGT6_16BIT_FSMC/HARDWARE/TOUCH/touch.c <==
#include "touch.h"
#include "lcd.h"
#include "delay.h"
#include "stdlib.h"
#include "math.h"
#include "24cxx.h"
#include "gui.h"

void TP_Write_Byte(u8 num)    
{  
	u8 count=0;   
	for(count=0;count<8;count++)  
	{ 	  
		if(num&0x80)TDIN_SET();  
		else TDIN_CLR();   
		num<<=1;    
		TCLK_CLR(); 
		delay_us(1);
		TCLK_SET();		//上升沿有效	        
	}		 			    
}

u16 TP_Read_AD(u8 CMD)	  
{ 	 
	u8 count=0; 	  
	u16 Num=0; 
	TCLK_CLR();		//先拉低时钟 	 
	TDIN_CLR(); 	//拉低数据线
	TCS_CLR(); 		//选中触摸屏IC
	TP_Write_Byte(CMD);//发送命令字
	delay_us(6);//ADS7846的转换时间最长为6us
	TCLK_CLR(); 	     	    
	delay_us(1);    	   
	TCLK_SET();		//给1个时钟，清除BUSY
	delay_us(1);    
	TCLK_CLR(); 	     	    
	for(count=0;count<16;count++)//读出16位数据,只有高12位有效 
	{ 	
		Num<<=1; 	 
		TCLK_CLR();	//下降沿有效  	    	   
		delay_us(1);    
 		TCLK_SET();
 		if(DOUT_READ)Num++; 	
	}  	
	Num>>=4;   	//只有高12位有效.
	TCS_SET();		//释放片选	 
	return(Num);  
//#endif
}

u8 TP_Init(void)
{			    		   
	//注意,时钟使能之后,对GPIO的操作才有效
	//所以上拉之前,必须使能时钟.才能实现真正的上拉输出
		GPIO_InitTypeDef GPIO_Initure;	//GPIO	     
		__HAL_RCC_GPIOH_CLK_ENABLE();			//开启GPIOH时钟
		__HAL_RCC_GPIOI_CLK_ENABLE();			//开启GPIOI时钟
		__HAL_RCC_GPIOG_CLK_ENABLE();			//开启GPIOG时钟
        
		//PH6
		GPIO_Initure.Pin=GPIO_PIN_6;            //PH6
		GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  //推挽输出
		GPIO_Initure.Pull=GPIO_PULLUP;          //上拉
		GPIO_Initure.Speed=GPIO_SPEED_HIGH;     //高速
		HAL_GPIO_Init(GPIOH,&GPIO_Initure);     //初始化
        
		//PI3,8
		GPIO_Initure.Pin=GPIO_PIN_3|GPIO_PIN_8; //PI3,8
		HAL_GPIO_Init(GPIOI,&GPIO_Initure);     //初始化
        
		//PH7
		GPIO_Initure.Pin=GPIO_PIN_7;            //PH7
		GPIO_Initure.Mode=GPIO_MODE_INPUT;      //输入
		HAL_GPIO_Init(GPIOH,&GPIO_Initure);     //初始化
        
		//PG3
		GPIO_Initure.Pin=GPIO_PIN_3;            //PG3
		HAL_GPIO_Init(GPIOG,&GPIO_Initure);     //初始化
	     	    		     
  	TP_Read_XY(&tp_dev.x,&tp_dev.y);//第一次读取初始化	 
 	AT24CXX_Init();//初始化24CXX
	if(TP_Get_Adjdata())return 0;//已经校准
	else			   //未校准?
	{ 										    
		LCD_Clear(WHITE);//清屏
	    TP_Adjust();  //屏幕校准 
		TP_Save_Adjdata();	 
	}			
	TP_Get_Adjdata();	
	return 1; 									 
}
